@@ -1,4 +1,4 @@
-Copyright (c) 2006 - 2012, Armin Biere, Johannes Kepler University.
+Copyright (c) 2006 - 2013, Armin Biere, Johannes Kepler University.
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to
